# VeritasEngine

./: CMakeLists.txt  README.md
include/Veritas/Engine/: Engine.h
include/Veritas/Engine/Assets/: Assets.h  Camera.h  ImageFile.h  Mesh.h  Scene.h  SourceFile.h
include/Veritas/Engine/Runtime/: Navigation.h  PostProcessing.h  Renderer.h  Runtime.h
src/Assets/: Camera.cpp  ImageFile.cpp  Mesh.cpp  Scene.cpp  SourceFile.cpp
src/Runtime/: Navigation.cpp  PostProcessing.Distort.glsl  PostProcessing.Invert.glsl  PostProcessing.MaskedInvert.glsl  PostProcessing.SceneFringe.glsl  PostProcessing.VertexProgram.glsl  PostProcessing.Vignette.glsl  PostProcessing.cpp  Renderer.FragmentProgram.glsl  Renderer.VertexProgram.glsl  Renderer.cpp
